@@ -1063,7 +1063,7 @@
 2307,0,6,4,-1,0x02,1,5,1,no,0,0,10,weapon,0,		LG_CANNONSPEAR,Cannon Spear
 2308,7,6,1,-1,0,0,10,1,yes,0,0,0,weapon,0,		LG_BANISHINGPOINT,Banishing Point
 2309,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_TRAMPLE,Trample
-2310,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_SHIELDPRESS,Shield Press
+2310,3,6,1,0,0,0,5,1,no,0,0,0,weapon,0,		LG_SHIELDPRESS,Shield Press
 2311,0,6,4,0,0x03,2,5,1,no,0,0,0,none,0,		LG_REFLECTDAMAGE,Reflect Damage
 2312,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_PINPOINTATTACK,Pinpoint Attack
 2313,0,6,4,0,0x01,0,5,1,no,0,0,0,weapon,0,		LG_FORCEOFVANGUARD,Force of Vanguard
@@ -1071,11 +1071,11 @@
 2315,0,0,0,0,0,0,3,0,no,0,0,0,none,0,		LG_SHIELDSPELL,Shield Spell
 2316,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_EXEEDBREAK,Exceed Break
 2317,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_OVERBRAND,Over Brand
-2318,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_PRESTIGE,Prestige
+2318,0,6,4,0,0x1,0,5,1,yes,0,0,0,none,0,		LG_PRESTIGE,Prestige
 2319,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_BANDING,Banding
 2320,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_MOONSLASHER,Moon Slasher
 2321,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_RAYOFGENESIS,Ray of Genesis
-2322,7,6,16,0,0x3,1,5,0,no,0,0,0,none,0,		LG_PIETY,Piety
+2322,7,6,16,0,0x3,1,5,1,yes,0,0,0,none,0,		LG_PIETY,Piety
 2323,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_EARTHDRIVE,Earth Drive
 2324,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_HESPERUSLIT,Hesperus Lit
 2325,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_INSPIRATION,Inspiration
