@@ -1063,6 +1063,9 @@ int skill_additional_effect (struct block_list* src, struct block_list *bl, int 
 			skill_castend_damage_id(src, bl, NC_AXEBOOMERANG, pc_checkskill(sd, NC_AXEBOOMERANG), tick, 1);
 		sc_start(bl, SC_STUN, 5*skilllv, skilllv, skill_get_time(skillid, skilllv));
 		break;
+	case LG_SHIELDPRESS:
+		sc_start(bl, SC_STUN, 30 + 8 * skilllv, skilllv, skill_get_time(skillid,skilllv));
+		break;
 	case WM_METALICSOUND:
 		sc_start(bl, SC_CHAOS, 20 + 5 * skilllv, skilllv, skill_get_time(skillid,skilllv));
 		break;
@@ -3053,6 +3056,7 @@ int skill_castend_damage_id (struct block_list* src, struct block_list *bl, int 
 	case SC_FEINTBOMB:
 	case LG_CANNONSPEAR:
 	case LG_BANISHINGPOINT:
+	case LG_SHIELDPRESS:
 	case LG_RAGEBURST:
 	case WM_METALICSOUND:
 	case WM_SEVERE_RAINSTORM_MELEE:
@@ -3695,7 +3699,7 @@ int skill_castend_damage_id (struct block_list* src, struct block_list *bl, int 
 		{
 			int spheres[5] = { 0, 0, 0, 0, 0 },
 				positions[5] = {-1,-1,-1,-1,-1 },
-				i, j = 0, k, subskill;
+				i, j = 0, k, subskill = 0;
 
 			for( i = SC_SPHERE_1; i <= SC_SPHERE_5; i++ )
 				if( sc && sc->data[i] )
@@ -4544,6 +4548,7 @@ int skill_castend_nodamage_id (struct block_list *src, struct block_list *bl, in
 	case NC_HOVERING:
 	case NC_SHAPESHIFT:
 	case SC_DEADLYINFECT:
+	case LG_PRESTIGE:
 	case SO_STRIKING:
 	case GN_CARTBOOST:
 		clif_skill_nodamage(src,bl,skillid,skilllv,
@@ -11234,6 +11239,14 @@ int skill_check_condition_castbegin(struct map_session_data* sd, short skill, sh
 			return 0;
 		}
 		break;
+		/* Remove when these sc's are implemented. [pakpil]
+	case LG_PRESTIGE:
+		if( sc && (sc->data[SC_BANDING] || sc->data[SC_INSPIRATION]) )
+		{
+			clif_skill_damage(sd,skill,0,0,0);
+			return 0;
+		}
+		break;*/
 	case LG_RAGEBURST:
 		if( sd->rageball == 0 )
 		{
