@@ -455,6 +455,7 @@ typedef enum sc_type {
 	SC_PUTTI_TAILS_NOODLES,
 
 	SC_REUSE_STASIS,
+	SC_PRESTIGE,
 	SC_MAX, //Automatically updated max, used in for's to check we are within bounds.
 } sc_type;
 
